k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointy-backend
  namespace: appointy
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: appointy-backend
  template:
    metadata:
      labels:
        app: appointy-backend
    spec:
      containers:
      - name: backend
        image: ayeshaazad/appointy-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        startupProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 60
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 0
          periodSeconds: 20
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 5
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
