k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointy-frontend
  namespace: appointy
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: appointy-frontend
  template:
    metadata:
      labels:
        app: appointy-frontend
    spec:
      containers:
      - name: frontend
        image: ayeshaazad/appointy-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 20
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 5
          timeoutSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: appointy-frontend
  namespace: appointy
spec:
  type: LoadBalancer
  selector:
    app: appointy-frontend
  ports:
  - port: 80
    targetPort: 80
