k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointy-ingress
  namespace: appointy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
  - host: app.talha.icu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appointy-frontend
            port:
              number: 80
  - host: admin.talha.icu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appointy-admin
            port:
              number: 80
  - host: api.talha.icu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appointy-backend
            port:
              number: 4000
